Simplify notUsable className functionality

--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -812,15 +812,11 @@ body.jsonEdit:not(.hitTest) .widget.foreign, body.jsonEdit:not(.hitTest):not(.sh
  --notUsable:true;
 }
 
-body:not(.jsonEdit) .widget.notUsable {
+body:not(.jsonEdit) .widget:not(.zoomy).notUsable {
   pointer-events: none !important;
 }
 
-.widget.zoomyNotUsable {
-  --zoomyNotUsable:true;
- }
- 
- body:not(.jsonEdit) .widget.zoomyNotUsable > * {
+body:not(.jsonEdit) .widget.zoomy.notUsable > * {
    pointer-events: none !important;
  }
 
