--- a/client/css/editmode.css
+++ b/client/css/editmode.css
@@ -70,6 +70,9 @@
 #addHand::before{
   content:'[holder_hand]';
 }
+#addZoomy::before{
+  content:'[zoom_in]';
+}
 #addOverlay .widget, #addOverlay textarea {
   cursor: pointer;
 }
