--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -169,6 +169,10 @@ body.lightsOff .jeTreeExpander::before, body.lightsOff .jeTreeExpander-down::bef
   display: block;
 }
 
+.jeLogFilterNoMatch {
+  opacity: 0.2;
+}
+
 #jeText {
   background: none;
   -webkit-text-fill-color: transparent;
