added filter textbox to debug log (#2564)

--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -169,6 +169,17 @@ body.lightsOff .jeTreeExpander::before, body.lightsOff .jeTreeExpander-down::bef
   display: block;
 }
 
+.jeLogFilterMatch {
+  font-weight: bold;
+}
+
+.jeLogFilterNoMatch {
+  opacity: 0.5;
+}
+.jeLogFilterNoMatch:hover {
+  opacity: 1;
+}
+
 #jeText {
   background: none;
   -webkit-text-fill-color: transparent;
