Fix broken material symbols

--- a/client/css/widgets/imagewidget.css
+++ b/client/css/widgets/imagewidget.css
@@ -56,7 +56,7 @@
 }
 
 .autoIconAlignFont {
-  font-family: "Material Icons";
+  font-family: "Material Symbols";
   font-weight: normal;
   line-height: 1;
   min-height: var(--targetSize);
