--- a/client/css/widgets/imagewidget.css
+++ b/client/css/widgets/imagewidget.css
@@ -77,6 +77,7 @@
   font-size: calc(var(--targetSize) /  1.150);
   top:       calc(var(--targetSize) *  0.075);
   left:      calc(var(--targetSize) * -0.055);
+  transform-origin: 55% 45%;
 }
 
 .autoIconAlignCustomAsset {
