Add icons, images, and text to holders
Builds on #1937. Supersedes #2126.

For text, it works like the text and icon combo on basic widgets and buttons, etc.  This should have the smallest impact (i.e., none) on child widgets inheriting css tweaks on the holder itself.

--- a/client/css/widgets/imagewidget.css
+++ b/client/css/widgets/imagewidget.css
@@ -83,3 +83,20 @@
 .autoIconAlignCustomAsset {
   background-size: contain;
 }
+
+.widget.holder > .holderTextOnly {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: var(--color);
+  overflow: hidden;
+  word-break: normal;
+  white-space: normal;
+  line-height: 1.1;
+}
