fixed showing hidden widgets without JSON panel

--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -794,11 +794,11 @@ div[icon] .buttons {
   --foreign:true;
 }
 
-body:not(.jsonEdit) .widget.foreign, body:not(.jsonEdit) .widget.hidden {
+body:not(.edit) .widget.foreign, body:not(.edit) .widget.hidden {
   display: none !important;
 }
 
-body.jsonEdit:not(.hitTest) .widget.foreign, body.jsonEdit:not(.hitTest):not(.showHiddenWidgets) .widget.hidden {
+body.edit:not(.hitTest) .widget.foreign, body.edit:not(.hitTest):not(.showHiddenWidgets) .widget.hidden {
   /* Edit mode uses elementsFromPoint to determine widgets under the cursor, so
      we hide and pass pointer events through the element but don't use display: none here
      to prevent invalidating all layout every time the mouse moves. When hit testing
