--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -777,7 +777,7 @@ body.panning #roomArea {
   cursor: grabbing;
 }
 
-body.zoom2x .movable.widget, body.zoom2x.edit #roomArea {
+body.zoom2x .movable.widget, body.zoom2x .canvas.widget, body.zoom2x.edit #roomArea {
   cursor: default;
 }
 
