--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -23,6 +23,10 @@
   --positiveInput: #009502;
   --negativeInput: #950000;
   --neutralInput: #1f5ca6;
+  --zoom: 1;
+  --roomZoom: 1;
+  --roomPanX: 0px;
+  --roomPanY: 0px;
 }
 
 body {
@@ -473,6 +477,10 @@ body.aspectTooGood.hiddenToolbar {
       content: '[volume_up]';
     }
 
+    #zoom2xButton::before {
+      content: '[zoom_in]';
+    }
+
     html:not(:fullscreen) #fullscreenButton::before {
       content: '[enter_fullscreen]';
     }
@@ -539,56 +547,56 @@ body.aspectTooGood.hiddenToolbar {
       }
     }
 
-    @media (max-width: 460px) {
-      body.aspectTooGood #addButton {
-        display: none;
-      }
-    }
-
     @media (max-height: 230px) {
-      body:not(.horizontalToolbar) #addButton {
-        display: none;
-      }
-    }
-
-    @media (max-height: 200px) {
       body:not(.horizontalToolbar) #aboutButton {
         display: none;
       }
     }
 
-    @media (max-width: 410px) {
+    @media (max-width: 460px) {
       body.aspectTooGood #aboutButton {
         display: none;
       }
     }
 
-    @media (max-width: 360px) {
+    @media (max-width: 410px) {
       body.aspectTooGood #editButton {
         display: none;
       }
     }
 
-    @media (max-height: 170px) {
+    @media (max-height: 190px) {
       body:not(.horizontalToolbar) #editButton {
         display: none;
       }
     }
 
-    @media (max-height: 140px) {
+    @media (max-height: 160px) {
       body:not(.horizontalToolbar) #playersButton {
         display: none;
       }
     }
 
-    @media (max-width: 300px) {
+    @media (max-height: 120px) {
+      body:not(.horizontalToolbar) #zoom2xButton {
+        display: none;
+      }
+    }
+
+    @media (max-width: 350px) {
       body.aspectTooGood #playersButton {
         display: none;
       }
     }
 
-    @media (max-width: 250px) {
+    @media (max-width: 295px) {
       body.aspectTooGood #hideToolbarButton {
+        display: none;
+      }
+    }
+
+    @media (max-width: 250px) {
+      body.aspectTooGood #zoom2xButton {
         display: none;
       }
     }
@@ -600,25 +608,25 @@ body.aspectTooGood.hiddenToolbar {
     }
 
     @media (max-width: 320px) {
-      body.horizontalToolbar #addButton {
-        display: none;
-      }
-    }
-
-    @media (max-width: 300px) {
       body.horizontalToolbar #aboutButton {
         display: none;
       }
     }
 
-    @media (max-width: 245px) {
+    @media (max-width: 260px) {
       body.horizontalToolbar #editButton {
         display: none;
       }
     }
 
-    @media (max-width: 190px) {
+    @media (max-width: 220px) {
       body.horizontalToolbar #playersButton {
+        display: none;
+      }
+    }
+
+    @media (max-width: 160px) {
+      body.horizontalToolbar #zoom2xButton {
         display: none;
       }
     }
@@ -747,6 +755,31 @@ div[icon] .buttons {
 #room {
   transform: scale(var(--scale));
   transform-origin: left top;
+}
+
+body.zoom2x #roomArea {
+  overflow: hidden;
+}
+
+body.zoom2x #room {
+  transform: translate(var(--roomPanX), var(--roomPanY)) scale(calc(var(--scale) * var(--zoom))) ;
+  transform-origin: left top;
+}
+
+body.panning {
+  cursor: grabbing;
+}
+
+body.zoom2x #roomArea {
+  cursor: grab;
+}
+
+body.panning #roomArea {
+  cursor: grabbing;
+}
+
+body.zoom2x .movable.widget, body.zoom2x .canvas.widget, body.zoom2x.edit #roomArea {
+  cursor: default;
 }
 
 ::-webkit-scrollbar {
