feat: Add new reusable widgets and fix selection bug

--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -431,7 +431,6 @@
 }
 
 .inventory.editorModule li.readonly input {
-  background-color: #eee;
-  color: #999;
   pointer-events: none;
+  border: none;
 }
