--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -439,12 +439,12 @@
   margin: 0;
 }
 
-.widgets.editorModule li .widget-info .widget-type svg.hasRoutine, .legend-text svg.hasRoutine{
-  color: orange;
+.widgets.editorModule li .widget-info .widget-type svg.hasRoutine, .widgets.editorModule .legend-text svg.hasRoutine{
+  fill: orange;
 }
 
-.widgets.editorModule li .widget-info .widget-type svg.isUnique, .legend-text svg.isUnique{
-  color: red;
+.widgets.editorModule li .widget-info .widget-type svg.isUnique, .widgets.editorModule .legend-text svg.isUnique{
+  fill: red;
 }
 
 .widgets.editorModule li .actions {
@@ -477,7 +477,7 @@
   background: var(--VTTblue);
   color: white;
   padding: 0 0 0 10px;
-  border-radius: 5px 5px 0 0;,
+  border-radius: 5px 5px 0 0;
   min-height: 40px;
 }
 
