--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -395,6 +395,14 @@
   border-top: 1px solid #ccc;
 }
 
+.widgets.editorModule .widget-group ul {
+  border-top: 0px none transparent;
+}
+
+.widgets.editorModule .widget-group + ul {
+  border-top: 3px double var(--textColor);
+}
+
 .widgets.editorModule ul {
   list-style: none;
   padding: 0;
@@ -570,6 +578,7 @@ body.darkMode .widget-group-header {
 
 .widget-group-header .collapse-arrow {
     width: 1.2em;
+    height: 1.2em;
     text-align: center;
 }
 
