--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -694,17 +694,14 @@ body.aspectTooGood.hiddenToolbar {
       position: absolute;
       left: 0;
       top: 0;
-      font-size: 12px;
+      font-size: 16px;
       font-weight: bold;
       text-align: center;
       text-shadow: 0 0 5px #0005;
-      pointer-events: none;
-      transition: color 0.3s ease;
-      background: var(--toolbarColor);
       padding: 20px;
-      border-radius: 4px;
       width: 100%;
       box-sizing: border-box;
+      background-color: var(--VTTblue);
     }
 
     #lockZoomButton {
