Feat: Implement custom reusable widgets feature

--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -436,7 +436,7 @@
   width: 18px;
   height: 18px;
   fill: currentColor;
-  margin: 0 5px;
+  margin: 0 0 0 3px;
 }
 
 .explainer-text svg, .legend-text svg{
