--- a/client/css/widgets/card.css
+++ b/client/css/widgets/card.css
@@ -3,12 +3,7 @@
   color: black;
 }
 
-.card > .cardFace {
-  display: none;
-}
-
-.card > .active.cardFace {
-  display: block;
+.card .cardFace {
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -16,7 +11,7 @@
   box-sizing: border-box;
 }
 
-.card > .cardFace > .cardFaceObject {
+.card .cardFaceObject {
   position: absolute;
   background-size: contain;
   background-repeat: no-repeat;
